# feature-flag-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging_config.py  main.py  models.py
app/cache/: cache.py
app/services/: evaluation_service.py
app/storage/: storage.py
tests/: conftest.py  test_api.py  test_cache.py  test_evaluation.py
